# esp-claw

./: .gitignore  CHANGELOG.md  README.md  README_CN.md  USER_GUIDE.md
.gitlab/ci/: build-doc.yml  build.yml  build_apps.py
application/basic_demo/: CMakeLists.txt  sdkconfig.defaults
application/basic_demo/boards/nm_cyd_c5/: README.md  board_devices.yaml  board_info.yaml  board_peripherals.yaml  sdkconfig.defaults.board  setup_device.c
application/basic_demo/main/: Kconfig.projbuild  app_boot_button.h  app_expression_emote.c  app_message_inbox.c  app_message_inbox.h  app_status_screen.c  app_status_screen.h  app_touch_xpt2046.c  app_touch_xpt2046.h  config_http_server.c  config_http_server.h  idf_component.yml  main.c
application/edge_agent/: CMakeLists.txt  sdkconfig.defaults
application/edge_agent/docs/: cjk_font_plan.zh-cn.md  llm_agent_routing_design.zh-cn.md  token_usage_dashboard_plan.zh-cn.md  whatsapp_integration_plan.zh-cn.md
application/edge_agent/main/: CMakeLists.txt  app_boot_button.c  app_boot_button.h  app_message_inbox.c  app_message_inbox.h  app_status_screen.c  app_status_screen.h  app_touch_xpt2046.c  app_touch_xpt2046.h  idf_component.yml  main.c
application/edge_agent/main/lua_scripts/: nmminer_control.lua  nmminer_info.lua  nmminer_setting.lua
application/edge_agent/main/skills/: nmminer.md  skill_creator.md  skills_list.json
application/edge_agent/main/skills/lua_demo/scripts/: nm_cyd_c5_backlight.lua  nm_cyd_c5_gps.lua  nmminer_scan.lua
application/edge_agent/main/skills/nm_cyd_c5_backlight/: SKILL.md
application/edge_agent/main/skills/nm_cyd_c5_rgb/: SKILL.md
application/edge_agent/main/skills/nm_cyd_c5_screen/: SKILL.md
application/edge_agent/main/skills/nmminer/: SKILL.md
application/edge_agent/main/skills/skill_creator/: SKILL.md
components/common/app_claw/: CMakeLists.txt  Kconfig  app_capabilities.c  app_claw.c  app_lua_modules.c  idf_component.yml
components/common/app_sd_mirror/: CMakeLists.txt  app_sd_mirror.c
components/common/emote/: CMakeLists.txt  emote.c
components/common/sdcard_mount/: CMakeLists.txt  README.md  sdcard_mount.c
components/common/settings/: CMakeLists.txt  settings_store.c
components/common/spi_bus_arbiter/: CMakeLists.txt  spi_bus_arbiter.c
components/common/wifi_manager/: wifi_manager.c
components/lua_modules/lua_driver_touch/: CMakeLists.txt
components/lua_modules/lua_module_display/: CMakeLists.txt
components/lua_modules/lua_module_display/src/: display_hal.c  display_hal.h  lua_module_display.c
components/lua_modules/lua_module_http/: CMakeLists.txt  README.md
components/lua_modules/lua_module_lcd_touch/: CMakeLists.txt
components/lua_modules/lua_module_touch/: CMakeLists.txt
(+39 files in other folders)
