idf_component_register(
    SRCS
        "src/display_hal.c"
        "src/lua_module_display.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        cap_lua
        display_arbiter
        espressif__esp_board_manager
        esp_driver_ledc
        esp_lcd
        esp_painter
        libpng
        spi_bus_arbiter
)
